feat: update dependencies and add new features to README and demo routes

--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 1,
+            "activePatchIndex": 2,
             "patches": [
                 {
                     "date": 1759243155999,
@@ -12,6 +12,10 @@
                 {
                     "date": 1759244948794,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -21,5 +21,6 @@\n *.ntvs*\r\n *.njsproj\r\n *.sln\r\n *.sw?\r\n-.VSCodeCounter\n\\ No newline at end of file\n+.VSCodeCounter\r\n+.lh\n\\ No newline at end of file\n"
+                },
+                {
+                    "date": 1759553357211,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -22,5 +22,6 @@\n *.njsproj\r\n *.sln\r\n *.sw?\r\n .VSCodeCounter\r\n-.lh\n\\ No newline at end of file\n+.lh\r\n+vane-lazy-image\n\\ No newline at end of file\n"
                 }
             ],
             "date": 1759243155999,
